fixes on mobile

--- a/styles/main.less
+++ b/styles/main.less
@@ -161,9 +161,7 @@ b, strong {
 
 }
 
-div#pop-parent-for-title-links {
-  min-height: 10px;
-}
+
 #pop-parent-for-title-links {
   position: relative;
 //  to fill the full width
@@ -251,7 +249,14 @@ div#pop-parent-for-title-links {
       margin-top: 0;
     }
   }
+  .has-title-description {
+    .asset-title {
+      text-align: left;
+    }
+
+  }
 }
+
 
 #main-region {
   float: left;
@@ -522,6 +527,8 @@ div#pop-parent-for-title-links {
     .left {
       width: 255px;
       float: left;
+      margin-right: 25px;
+      margin-bottom: 35px;
 
       #top-region & {
         width:365px ;
@@ -538,15 +545,6 @@ div#pop-parent-for-title-links {
       height: 0;
     }
 
-    .floated-parent-for-imagegroup-texts {
-      float: right;
-      width: 400px;
-
-      #top-region & {
-        width: 550px;
-      }
-
-    }
 
   }
 
@@ -580,6 +578,8 @@ div#pop-parent-for-title-links {
     .left {
       width: 255px;
       float: left;
+      margin-right: 25px;
+      margin-bottom: 35px;
     }
 
 
@@ -592,11 +592,7 @@ div#pop-parent-for-title-links {
       height: 0;
     }
 
-    .floated-parent-for-imagegroup-texts {
-      float: right;
-      width: 400px;
 
-    }
 
   }
   &.asset-size-2 {
@@ -623,9 +619,10 @@ div#pop-parent-for-title-links {
     .left {
       width: 255px;
       float: left;
-
+      margin-right: 25px;
+      margin-bottom: 35px;
       #top-region & {
-        width:365px ;
+        width: 365px;
       }
     }
 
@@ -639,15 +636,7 @@ div#pop-parent-for-title-links {
       height: 0;
     }
 
-    .floated-parent-for-imagegroup-texts {
-      float: right;
-      width: 400px;
 
-      #top-region & {
-        width: 550px;
-      }
-
-    }
 
   }
 
@@ -658,7 +647,10 @@ div#pop-parent-for-title-links {
   #populr > .mobile-reset();
 
   // Edit the grid for mobile
-  .columnizer-row-inner, #pop-title { max-width: 640px; }
+  .columnizer-row-inner, #pop-title {
+    max-width: 640px;
+  margin:0 auto;
+  }
   .columnizer-col { margin: 0 10px 20px !important; }
 
   // Edit the typography for mobile
@@ -676,6 +668,9 @@ div#pop-parent-for-title-links {
     margin-left: 0;
 
   }
+  #top-region {
+    border-bottom: none;
+  }
   #main-content {
     width: auto !important;
 
@@ -684,16 +679,17 @@ div#pop-parent-for-title-links {
     width: 104.3%;
 
   }
+
+  .left {
+    float: none !important;
+    width: auto !important;
+    margin: 0 auto 25px !important;
+  }
 //  Image asset styling
 #top-region .asset-type-imagegroup ,.asset-type-embedgroup ,.asset-type-documentgroup,
 #main-region .asset-type-imagegroup ,.asset-type-embedgroup ,.asset-type-documentgroup{
   &.asset-size-1 {
-    .left {
-      width :40% !important;
-    }
-    .floated-parent-for-imagegroup-texts {
-      width:55% !important;
-    }
+
   }
 
 }
